# sentence-generator

./: CHANGELOG.md  add_words.py  chinese  chinese_chars.txt  config  english  sentence-generator.cabal  shell.nix
collections/: alphabet  emoji  english  everything  hearts  kuchma  potato
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Collection.hs  Generate.hs  Main.hs  Util.hs  Vocabulary.hs
