cabal-version:       >=1.10
name:                sentence-generator
version:             0.1.0.0
license-file:        LICENSE
author:              freedan42x
maintainer:          danil123550@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable sentence-generator
  main-is:             Main.hs
  other-modules:       Vocabulary
                     , Generate
                     , Util
  default-extensions:  TypeApplications
                     , LambdaCase
  build-depends:       base >=4.12 && <4.13
                     , process
                     , directory
                     , random
                     , containers
                     , split
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
